@@ -1,3 +1,9 @@
+2017-09-26  Dean Jackson  <dino@apple.com>
+
+        Unreviewed. Remove hardware concurrency from features list.
+
+        * features.json:
+
 2017-09-26  Antti Koivisto  <antti@apple.com>
 
         REGRESSION (222040): Google Maps Street View CrashTracer: [USER] com.apple.WebKit.WebContent.Development at com.apple.WebCore: WebCore::PropertyWrapperAcceleratedTransform::blend const + 92
